# Installer

./: Cargo.toml  README.md
.github/workflows/: build.yml  check.yml  release.yml
src/: main.rs
src/installer/: alloy.rs  cobalt.rs  gnuwin32.rs  google_drive.rs  inquire.rs  metadata.rs  mod.rs  steam.rs  windows.rs
