[package]
name = "alloy-installer"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
colored = "2.1.0"
custom_error = "1.9.2"
fs_extra = "1.3.0"
inquire = "0.6.2"
newline-converter = "0.3.0"
reqwest = "0.11.24"
ron = "0.8.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
spinners = "4.1.1"
tokio = { version = "1.36.0", features = ["full"] }
whoami = "1.4.1"
zip = "0.6.6"
